--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+:root {
+    --cor-principal: #001d54;
+    --cor-texto: #f4f4f4;
+    --cor-verde: #7aa901;
+    --cor-banner: #003399;
+    --cor-preto: black;
+    --cor-vermelho: red;
+    --cor-roxo: #AB0297;
+}
+
+
 body {
     margin: 1em 5em;
-    background-color: #001d54;
+    background-color: var(--cor-principal);
 }
 
 .cabecalho__container {
@@ -10,7 +21,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 2em;
-    border: 1px solid white;
+    border: 1px solid var(--cor-texto);
     border-radius: 0.5em;
 
 }
@@ -24,8 +35,12 @@ body {
 .about, .city {
     text-decoration: none;
     margin-left: 2em;
-    color: white;
+    color: var(--cor-texto);
     font-family: "Montserrat",sans-serif;
+}
+
+.cabecalho__ancoras {
+    display: block;
 }
 
 
@@ -33,19 +48,19 @@ body {
     text-decoration: none;
     margin-right: 2em;
     padding: 1em 1em;
-    color: white;
+    color: var(--cor-texto);
     cursor: pointer;
     border-radius: 0.5em;
 }
 
 .whatsapp {
-    background-color: green;
-    border: 1px solid white;
+    background-color: var(--cor-verde);
+    border: 1px solid var(--cor-texto);
 }
 
 .instagram {
-    background-color: purple;
-    border: 1px solid white;
+    background-color: var(--cor-roxo);
+    border: 1px solid var(--cor-texto);
 }
 
 
@@ -55,8 +70,8 @@ body {
 }
 
 .bi-phone, .bi-laptop, .bi-controller {
-    font-size: 30px;
-    color: white;
+    font-size: 1.9em;
+    color: var(--cor-texto);
 }
 
 .principal {
@@ -87,8 +102,8 @@ body {
 #botao_flutuante {
     text-decoration: none;
     background-color: transparent;
-    color: white;
-    font-size: 50px;
+    color: var(--cor-texto);
+    font-size: 3.1em;
     cursor: pointer;
 }
 
@@ -102,14 +117,14 @@ body {
 
 
 .principal__img {
-    width: 400px;
+    width: 25em;
     margin-bottom: 1.5em;
 }
 
 .principal_titulo {
     font-family: "Inter", sans-serif;
-    color: white;
-    font-size: 45px;
+    color: var(--cor-texto);
+    font-size: 2.8em;
     
 }
 
@@ -127,18 +142,17 @@ body {
 .oferta_premium, .oferta_inicial, .oferta_padrao{
     display: flex;
     flex-direction: column;
-    background-color: #003399;
     border-radius: 0.3em;
-    width: 350px;
+    width: 22em;
 }
 
 
 .oferta__titulo {
-    background-color: black;
-    color: white;
+    background-color: var(--cor-banner);
+    color: var(--cor-texto);
     padding: 0.5em;
     margin-bottom: 2em;
-    border-radius: 0.3em;
+    border-radius: 0.3em 0;
     text-align: center;
     font-family: "Inter", sans-serif;
 }
@@ -147,33 +161,33 @@ body {
     margin-bottom: 0.5em;
     text-align: center;
     font-family: "Poppins", sans-serif;
-    font-size: 45px;
+    font-size: 2.8em;
     
-    color: white;
+    color: var(--cor-texto);
 }
 
 .oferta__valor {
     text-align: center;
     margin-bottom: 1em;
     font-family: "Poppins", sans-serif;
-    font-size: 35px;
-    color: white;
+    font-size: 2.2em;
+    color: var(--cor-texto);
     
 }
 
 .oferta__roteador, .oferta__fibra {
     padding: 0.5em 1em;
     border-bottom: 1px solid;
-    font-size: 13px;
+    font-size: 0.8em;
     font-family: "Poppins", sans-serif;
-    color: white;
+    color: var(--cor-texto);
 }
 
 .oferta__intalacao {
     padding: 0.5em 1em;
     border-bottom: 1px solid;  
     font-family: "Poppins", sans-serif;
-    color: white;
+    color: var(--cor-texto);
 }
 
 
@@ -182,14 +196,14 @@ body {
 .oferta__adquira {
     text-decoration: none;
     text-align: center;
-    border: transparent;
+    border: none;
     cursor: pointer;
-    border-radius: 0.3em;
-    background-color: red;
+    border-radius: 0  0 0.3em 0.3em;
+    background-color: var(--cor-verde);
     padding: 0.3em;
-    color: white;
+    color: var(--cor-texto);
     font-family: "Inter", sans-serif;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .secundario_info {
@@ -203,12 +217,12 @@ body {
     display: flex;
     align-items: center;
     gap: 1em;
-    color: white;
-    font-size: 18px;
+    color: var(--cor-texto);
+    font-size: 1.1em;
 }
 
 .bi-speedometer2, .bi-wifi, .bi-headset {
-    font-size: 40px;
+    font-size: 2.5em;
     
 }
 
@@ -219,15 +233,15 @@ body {
 }
 
 .sobre_img {
-    width: 600px;
+    width: 37.5em;
 }
 
 .sobre_texto {
     font-family: "Inter", sans-serif;
     width: auto;
-    font-size: 34px;
+    font-size: 2.1em;
     line-height: 1.3;
-    color: white;
+    color: var(--cor-texto);
 }
 
 .principal_info {
@@ -236,18 +250,18 @@ body {
 
 .info_titulo {
     margin-top: 3em;
-    font-size: 30px;
+    font-size: 1.9em;
     font-family: "inter", sans-serif;
-    color: white;
+    color: var(--cor-texto);
 
 }
 
 .info_roteador {
-    color: white;
+    color: var(--cor-texto);
 }
 
 strong {
-    color: #7aa901;
+    color: var(--cor-verde);
 }
 
 .localidades {
@@ -259,8 +273,8 @@ strong {
 
 .localidades_texto {
     font-family: "Inter", sans-serif;
-    font-size: 24px;
-    color: white;
+    font-size: 1.5em;
+    color: var(--cor-texto);
     line-height: 1.3;
 }
 
@@ -273,8 +287,8 @@ strong {
 
 .rodape_conteudo {
     text-align: center;
-    font-size: 16px;
-    color: #7aa901;
+    font-size: 1em;
+    color: var(--cor-verde);
 }
 
 .rodape_icons {
@@ -284,5 +298,142 @@ strong {
 }
 
 .bi-github, .bi-linkedin {
-    color: #7aa901;
+    color: var(--cor-verde);
 }
+
+@media (min-width: 350px) and (max-width: 500px){
+
+    body {
+        height: 100vh;
+        margin: 1em;
+    }
+
+     .cabecalho__container {
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        padding: 0.5em;
+        border: none;
+        text-align: center;
+        
+    }
+
+    .about, .city {
+     display: none;
+    }
+
+    .icons {
+        display: none
+        
+    }
+
+    .bi-phone, .bi-laptop, .bi-controller {
+        font-size: 3em;
+        
+    }
+
+    .cabecalho__ancoras {
+        display: flex;
+        gap: 2em;
+    }
+
+    .whatsapp, .instagram {
+        display: flex;
+        gap: 0.5em;
+        padding: 1em 2em;
+        margin-right: 0;
+        border-radius: 0.5em 0;
+    }
+
+    .principal {
+        margin-top: 3em;
+    }
+
+    .principal__img {
+        width: 22em;
+        margin-top: 2em;
+    }
+
+    .principal_titulo {
+        font-size: 1.5em;
+    }
+
+    .principal__ofertas {
+        display: flex;
+        flex-direction: column;
+        gap: 3em;
+    }
+
+    .principal_info {
+        margin-top: 3em;
+    }
+
+    .oferta__titulo {
+        border-radius: 0.5em  0;
+        font-size: 1.3em;
+        background-color: var(--cor-banner);
+    }
+    .oferta__plano, .oferta__valor {
+        font-size: 2.5em;
+    }
+
+    .oferta__roteador, .oferta__fibra {
+        font-size: 1em;
+    }
+
+    .oferta__adquira {
+        font-size: 1.2em;
+        border-radius: 0 0 0.5em 0.5em;
+        background-color: var(--cor-verde);
+    }
+    .oferta_inicial, .oferta_padrao, .oferta_premium {
+        width: 90%;
+        border-radius: 0.6em;
+        background-color: transparent;
+        
+    }
+
+    
+
+    .info_titulo {
+        font-size: 1.5em;
+    }
+
+    .secundario_info {
+        display: flex;
+        flex-direction: column;
+        align-items: normal;
+        gap: 1.5em;
+        margin-top: 5em;
+    }
+    
+    .sobre_nos {
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 3em;
+    }
+
+    .sobre_img {
+        width: 17em;
+    }
+
+    .sobre_texto {
+        font-size: 1.5em;
+        width: 100%;
+    }
+
+   .localidades {
+    display: none;
+   }
+
+   .principal_botao {
+    display: none;
+   }
+
+   .rodape {
+    padding-bottom: 1em;
+    gap: 0.5em;
+   }
+}
+
+
