--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 
 body {
+    height: 100vh;
     margin: 1em 5em;
     background-color: var(--cor-principal);
 }
@@ -39,9 +40,6 @@ body {
     font-family: "Montserrat",sans-serif;
 }
 
-.cabecalho__ancoras {
-    display: block;
-}
 
 
 .whatsapp, .instagram {
@@ -85,7 +83,7 @@ body {
 .principal_botao {
     position: fixed;
     top: 85%;
-    left: 93%;
+    left: 95%;
     
 }
 .botao_zap_principal {
@@ -208,7 +206,7 @@ body {
 
 .secundario_info {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin-top: 8em;
 }
@@ -301,8 +299,8 @@ strong {
     color: var(--cor-verde);
 }
 
-@media (min-width: 350px) and (max-width: 500px){
 
+@media (min-width: 280px) and (max-width: 350px){
     body {
         height: 100vh;
         margin: 1em;
@@ -327,10 +325,144 @@ strong {
         
     }
 
-    .bi-phone, .bi-laptop, .bi-controller {
-        font-size: 3em;
+
+    .cabecalho__ancoras {
+        display: flex;
+        gap: 1em;
+    }
+
+    .whatsapp, .instagram {
+        display: flex;
+        gap: 0.5em;
+        padding: 1em;
+        margin-right: 0;
+        border-radius: 0.5em 0;
+    }
+
+    .principal {
+        margin-top: 3em;
+    }
+
+    .principal__img {
+        width: 100%;
+        margin-top: 2em;
+    }
+
+    .principal_titulo {
+        font-size: 1.3em;
+    }
+
+    .principal__ofertas {
+        display: flex;
+        flex-direction: column;
+        gap: 3em;
+    }
+
+    .principal_info {
+        margin-top: 3em;
+    }
+
+    .oferta__titulo {
+        border-radius: 0.5em  0;
+        font-size: 1.1em;
+    }
+    .oferta__plano, .oferta__valor {
+        font-size: 2.3em;
+    }
+
+    .oferta__roteador, .oferta__fibra {
+        font-size: 0.8em;
+    }
+
+    .oferta__adquira {
+        font-size: 1em;
+        border-radius: 0 0 0.5em 0.5em;
+    }
+    .oferta_inicial, .oferta_padrao, .oferta_premium {
+        width: 90%;
+        border-radius: 0.6em;
         
     }
+
+    .info_roteador {
+        font-size: 0.8em;
+    }
+
+    .info_titulo {
+        font-size: 1.1em;
+    }
+
+    .secundario_info {
+        display: flex;
+        flex-direction: column;
+        align-items: normal;
+        gap: 1.2em;
+        margin-top: 5em;
+    }
+    
+    .secundario_icons {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .sobre_nos {
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 3em;
+    }
+
+    .sobre_img {
+        width: 100%;
+    }
+
+    .sobre_texto {
+        font-size: 1.3em;
+        width: 100%;
+    }
+
+   .localidades {
+    display: none;
+   }
+
+   .principal_botao {
+    display: none;
+   }
+
+   .rodape {
+    padding-bottom: 1em;
+    gap: 0.5em;
+   }
+}
+
+
+
+@media (min-width: 351px) and (max-width: 520px){
+
+    body {
+        height: 100vh;
+        margin: 1.5em;
+    }
+
+     .cabecalho__container {
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        padding: 0.5em;
+        border: none;
+        text-align: center;
+        
+    }
+
+    .about, .city {
+     display: none;
+    }
+
+    .icons {
+        display: none
+        
+    }
+
 
     .cabecalho__ancoras {
         display: flex;
@@ -350,7 +482,7 @@ strong {
     }
 
     .principal__img {
-        width: 22em;
+        width: 90%;
         margin-top: 2em;
     }
 
@@ -371,7 +503,7 @@ strong {
     .oferta__titulo {
         border-radius: 0.5em  0;
         font-size: 1.3em;
-        background-color: var(--cor-banner);
+        
     }
     .oferta__plano, .oferta__valor {
         font-size: 2.5em;
@@ -384,12 +516,12 @@ strong {
     .oferta__adquira {
         font-size: 1.2em;
         border-radius: 0 0 0.5em 0.5em;
-        background-color: var(--cor-verde);
+       
     }
     .oferta_inicial, .oferta_padrao, .oferta_premium {
         width: 90%;
         border-radius: 0.6em;
-        background-color: transparent;
+        
         
     }
 
@@ -413,6 +545,11 @@ strong {
         margin-top: 3em;
     }
 
+    .secundario_icons {
+        display: flex;
+        flex-direction: column;
+        font-size: 1.2em;
+    }
     .sobre_img {
         width: 17em;
     }
@@ -435,5 +572,466 @@ strong {
     gap: 0.5em;
    }
 }
+
+@media (min-width: 521px) and (max-width: 700px){
+
+    body {
+        height: 100vh;
+        margin: 1em;
+    }
+
+     .cabecalho__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1em;
+        gap: 1.5em;
+        border: none;
+        
+    }
+
+    .about, .city {
+     display: none;
+    }
+
+    .icons {  
+        gap: 2em;
+    }
+
+
+    .cabecalho__ancoras {
+        display: flex;
+        gap: 1.5em;
+    }
+
+    .whatsapp, .instagram {
+        display: flex;
+        gap: 1em;
+        padding: 1em;
+        margin-right: 0;
+        border-radius: 0.5em 0;
+    }
+
+
+    .principal__img {
+        width: 90%;
+        margin-top: 2em;
+    }
+
+    .principal_titulo {
+        font-size: 2.3em;
+    }
+
+    .principal__ofertas {
+        display: flex;
+        flex-direction: column;
+        gap: 3em;
+    }
+
+    .principal_info {
+        margin-top: 3em;
+    }
+
+    .oferta__titulo {
+        border-radius: 0.5em  0;
+        font-size: 2em;
+        
+    }
+    .oferta__plano, .oferta__valor {
+        font-size: 3.5em;
+    }
+
+    .oferta__roteador, .oferta__fibra, .oferta__intalacao {
+        font-size: 1.5em;
+    }
+
+    .oferta__adquira {
+        font-size: 1.8em;
+        border-radius: 0 0 0.5em 0.5em;
+        
+    }
+    .oferta_inicial, .oferta_padrao, .oferta_premium {
+        width: 90%;
+        border-radius: 0.6em;
+       
+        
+    }
+    
+    
+    .info_roteador {
+        font-size: 1.5em;
+    }
+
+
+    .secundario_info {
+        display: flex;
+        flex-direction: column;
+        align-items: normal;
+        gap: 1.5em;
+        margin-top: 5em;
+    }
+    
+    .secundario_icons {
+        display: flex;
+        flex-direction: column;
+        font-size: 1.5em;
+    }
+    .sobre_nos {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5em;
+    }
+
+    .sobre_img {
+        width: 100%
+    }
+
+    .sobre_texto {
+        font-size: 2em;
+        width: 90%;
+    }
+
+   .localidades_texto {
+    font-size: 2em;
+   }
+
+   .principal_botao {
+    display: none;
+   }
+
+   .rodape {
+    padding-bottom: 1em;
+    gap: 0.5em;
+   }
+}
+
+@media (min-width: 701px) and (max-width: 1024px){
+
+    body {
+        height: 100vh;
+        margin: 1.5em;
+    }
+
+     .cabecalho__container {
+        display: flex;
+        align-items: center;
+        justify-content:space-around;
+        padding: 1em;
+        
+        
+    }
+
+   .about, .city {
+    margin: 0;
+   }
+
+    .icons {  
+       display: none;
+    }
+
+    .informacoes {
+        display: flex;
+        gap: 1em;
+        font-size: 1.2em;
+    }
+
+    .cabecalho__ancoras {
+        display: flex;
+        gap: 2em;
+    }
+
+    .whatsapp, .instagram {
+        display: flex;
+        gap: 1em;
+        padding: 1em;
+        margin-right: 0;
+        border-radius: 0.5em 0;
+    }
+
+
+    .principal__img {
+        width: 90%;
+        margin-top: 2em;
+    }
+
+    .principal_titulo {
+        font-size: 2.3em;
+    }
+
+    .principal__ofertas {
+        display: flex;
+        flex-direction: column;
+        gap: 3em;
+    }
+
+    .principal_info {
+        margin-top: 3em;
+    }
+
+    .oferta__titulo {
+        border-radius: 0.5em  0;
+        font-size: 2em;
+       
+    }
+    .oferta__plano, .oferta__valor {
+        font-size: 4.5em;
+    }
+
+    .oferta__roteador, .oferta__fibra, .oferta__intalacao {
+        font-size: 1.5em;
+    }
+
+    .oferta__adquira {
+        font-size: 1.8em;
+        border-radius: 0 0 0.5em 0.5em;
+        
+    }
+    .oferta_inicial, .oferta_padrao, .oferta_premium {
+        width: 90%;
+        border-radius: 0.6em;
+        
+        
+    }
+    
+    
+    .info_roteador {
+        font-size: 1.5em;
+    }
+
+
+    .secundario_info {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        gap: 1.5em;
+        margin-top: 5em;
+      }
+      
+      .secundario_icons {
+        display: flex;
+        flex-direction: column; 
+        align-items: center;     
+        text-align: center;      
+        gap: 0.5em;
+        font-size: 1.5em;
+      }
+
+    
+    .sobre_nos {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5em;
+        margin-bottom: 1em;
+    }
+
+    .sobre_img {
+        width: 100%
+    }
+
+    .sobre_texto {
+        font-size: 2em;
+        width: 90%;
+    }
+
+   .localidades_texto {
+    font-size: 2em;
+   }
+
+   .principal_botao {
+    display: none;
+   }
+
+   .rodape {
+    padding-bottom: 1em;
+    gap: 0.5em;
+    font-size: 1.5em;
+   }
+}
+
+@media (min-width: 1025px) and (max-width: 1380px) {
+    body {
+        height: 100vh;
+       margin: 3em;
+    }
+
+     .cabecalho__container {
+        display: flex;
+        align-items: center;
+        justify-content:space-around;
+        padding: 1em;
+        
+        
+    }
+
+   .about, .city {
+    margin: 0;
+   }
+
+   .icons {
+    gap: 3em;
+   }
+
+    .informacoes {
+        display: flex;
+        gap: 1em;
+        font-size: 1.2em;
+    }
+
+    .cabecalho__ancoras {
+        display: flex;
+        gap: 2em;
+    }
+
+    .whatsapp, .instagram {
+        display: flex;
+        gap: 1em;
+        padding: 1em;
+        margin-right: 0;
+        border-radius: 0.5em 0;
+    }
+   
+    .principal_titulo {
+        font-size: 2.5em;
+    }
+
+    .principal_info {
+        margin-top: 3em;
+    }
+
+   .oferta__titulo, .oferta__adquira {
+    font-size: 1.5em;
+   }
+
+   .oferta__plano {
+    font-size: 2.5em;
+   }
+
+   .oferta__roteador, .oferta__fibra {
+    font-size: 1em;
+   }
+
+    .oferta_inicial, .oferta_padrao, .oferta_premium {
+        width: 90%; 
+        
+    }
+    
+
+    .secundario_info {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        gap: 1.5em;
+        margin-top: 5em;
+      }
+      
+      .secundario_icons {
+        display: flex;
+        flex-direction: column; 
+        align-items: center;     
+        text-align: center;      
+        gap: 0.5em;
+        font-size: 1.5em;
+      }
+
+    
+    .sobre_nos {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5em;
+        margin-bottom: 1em;
+    }
+
+    .sobre_img {
+        width: 90%
+    }
+
+    .sobre_texto {
+        font-size: 2em;
+        width: 90%;
+    }
+
+   .localidades_texto {
+    font-size: 2em;
+   }
+
+   .principal_botao {
+    display: none;
+   }
+
+   .rodape {
+    padding-bottom: 1em;
+    gap: 0.5em;
+    font-size: 1.5em;
+   }
+}
+
+@media (min-width: 1683px) {
+    .cabecalho__container {
+        justify-content: space-around;
+    }
+
+    .informacoes {
+        font-size: 1.5em;
+    }
+
+    .icons {
+        font-size: 1.5em;
+    }
+
+    .whatsapp, .instagram {
+        font-size: 1.2em;
+    }
+
+    .principal_botao {
+        left: 96.5%;
+    }
+
+    .oferta__titulo, .oferta__adquira {
+        font-size: 2em;
+    }
+
+    .oferta__plano {
+        font-size: 4.5em;
+    }
+
+    .oferta__valor {
+        font-size: 3em;
+    }
+
+    .oferta__fibra, .oferta__intalacao, .oferta__roteador {
+        font-size: 1.5em;
+    }
+
+    .oferta_inicial, .oferta_padrao, .oferta_premium {
+        width: 80%;
+    }
+
+    .info_roteador {
+        font-size: 1.5em;
+    }
+
+    .info_titulo {
+        font-size: 2.5em;
+    }
+
+    .secundario_icons {
+        font-size: 1.5em;
+    }
+
+    .sobre_texto {
+        font-size: 2.5em;
+    }
+
+    .localidades_texto {
+        font-size: 2.5em;
+    }
+
+    .rodape {
+        font-size: 1.5em;
+    }
+}
+
+
+
 
 
